--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 body {
-  font-family: Roboto sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #FFFFFF;
 }
 
 .logo {
-  font-family: Raleway sans-serif;
+  font-family: "Raleway",sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
@@ -47,7 +47,7 @@ body {
 .address {
   font-style: normal;
 }
-.address a {
+.address-cont {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -55,10 +55,10 @@ body {
   color: #434455;
   text-decoration: none;
 }
-.address-mail:focus {
+.address-cont:focus {
   color: #404bbf;
 }
-.address a:hover {
+.address-cont:hover {
   color: #404bbf;
 }
 
@@ -80,15 +80,12 @@ body {
 }
 
 .servise {
-  font-family: Roboto sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
-  border-radius: 4px;
-  padding: 16px 32px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #4d5ae5;
   cursor: pointer;
 }
@@ -104,6 +101,7 @@ body {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .advantages ul {
@@ -128,6 +126,7 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  color: #2e2f42;
 }
 .our-team ul {
   list-style-type: none;
@@ -157,6 +156,7 @@ font-weight: 400;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    color: #2e2f42;
   }
 .our-portfolio ul {
   list-style-type: none;
@@ -174,6 +174,7 @@ font-weight: 400;
    text-transform: uppercase;
    text-decoration: none;
    color: #f4f4fd;
+  font-family: "Raleway", sans-serif;
  }
 .footer-p {
   font-weight: 400;
