--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@ font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
+  color: #2e2f42;
 }
 .list-p {
 font-weight: 400;
